packages/typ/tests/fixtures/diagnostics/0071_core_pattern_annotation_mismatch_06.ml
let ((zeta : bool), other_zeta) = (5, 6)
